# rust_dodge_game_bevyecs

./: '  .gitignore  Cargo.toml  README.md  ]
src/: bundles.rs  config.rs  game.rs  main.rs  world.rs
src/components/: animation.rs  animation_player.rs  area.rs  camera.rs  combat.rs  damage_counter.rs  distance_constraint.rs  dodge.rs  dying.rs  entity_data.rs  entity_state.rs  gravity_affected.rs  health.rs  knockback_trigger.rs  mod.rs  obb.rs  parent.rs  particle.rs  physics.rs  position.rs  quad.rs  register_components.rs  rigidbody.rs  rotation_offset.rs  sprite.rs  state.rs  state_machine.rs  states.rs  status.rs  text_object.rs  tile.rs  timer.rs  transform.rs  vector2.rs  velocity.rs  visible.rs  walker_animation.rs  walker_data.rs  walker_state.rs
src/core/: collision.rs  mod.rs  renderer.rs
src/ecs/: archetype.rs  archetype_bundle.rs  archetype_query.rs  component.rs  component_manager.rs  ecs.rs  ecs_query.rs  entity.rs  entity_manager.rs  mod.rs  query.rs  resource_manager.rs  sparse_set.rs  system.rs  system_manager.rs
src/events/: mod.rs
src/managers/: area_manager.rs  asset_manager.rs  chunk.rs  chunk_m.txt  chunk_manager.rs  mod.rs  renderer.rs  sprite_manager.rs  world.rs
src/math_helper/: mod.rs
src/plugins/: entity.rs  main_game_plugin.rs  mod.rs  physics.rs  physics_plugin.rs  proc_anim.rs  sdl_plugin.rs  states.rs  tags_handle.rs  timer_plugin.rs  weapon.rs  world.rs
src/resources/: area_manager.rs  area_manager.rs~  asset_manager.rs  camera.rs  chunk.rs  chunk_manager.rs  chunk_manager_backup.rs  delta_time_res.rs  draw_buffer.rs  (+10 more)
(+123 files in other folders)
