[package]
name = "dodge_game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = "0.18.0"
bevy_app = "0.18.0"
static_cell = "2.1.1"
bitflags = "2.5"
paste = "1.0"
rand = "0.8"
sdl2 =  { version = "0.38", features = [ "image", "ttf" ] }
fastnoise-lite = "1.1.1"
xsparseset = "0.2.5"
strum = "0.28.0"
strum_macros = "0.28"
